0.83.10
  - The commands "config -set fullscreen=true" and
    "config -set fullscreen=false" can now switch on or
    off the full-screen mode. (Wengier)
  - Fixed Ctrl+C not working in GNU ed. (Wengier)
  - Fixed incorrect behavior for handling trap flags
    in the dynamic core. (koolkdev)
  - Updated the Tiny File Dialog library to the latest
    version v3.8.4. (Wengier)
  - Improved OPL3Duo support, such as adding a buffer
    thread to get rid of slowdowns & breakups in audio
    playback when using the board. (DhrBaksteen)

0.83.9
  - Physical CD drives are now mountable in SDL2 builds
    just like SDL1 builds, so commands like "MOUNT -CD"
    should work in both SDL1 and SDL2 builds. Some code
    is adopted from the SDL2_CDROM library. (Wengier)
  - Implemented file locking support for mounting disk
    image files so that you cannot mount the same disk
    image files in read/write mode at the same time as
    this can cause possible disk corruptions. A config
    option "locking disk image mount" is added to the
    [dosbox] section which when set to false (or if the
    user mounts the image files read-only) will bypass
    the locking of image files. Also improved the DOS
    file locking function, which can be disabled by
    setting "share=false" in [dos] section. (Wengier)
  - Implemented PhysFS support so that you can mount
    archives (e.g. ZIP/7Z) as drives in read-only mode,
    e.g. "MOUNT C TEST.ZIP" or "MOUNT D FILES.7Z". Some
    code is ported from a custom DOSBox fork. The menu
    option "Mount an archive file (ZIP/7Z)" is added to
    Drive menu to mount archives as Drives. (Wengier)
  - INT 13h now obeys the "hard drive data rate limit"
    setting, using the same disk I/O delay code as
    INT 21h file I/O. [Issue #2039]
  - Linux/X11 SDL1 builds: Combine window move/resize
    into one call if possible, and not during window
    manager hints, to avoid resize problems with the
    XFCE 4.14 platform.